add payment info on admin page

--- a/app/design/adminhtml/default/default/template/info.phtml
+++ b/app/design/adminhtml/default/default/template/info.phtml
@@ -8,6 +8,7 @@
  * this template is used for payment method information at the right side, in progress bar.
  */
 ?>
-<!--<img src="<?php echo $this->getSkinUrl('images/Veritrans.png') ?>"/> -->
-<b>Credit Card via Veritrans</b>
-        
+<?php
+$code =  $this->getMethod()->getCode();
+?>
+<b>payment with <?=$code?> via Veritrans</b>
